[package]
name = "word-dist"
version = "1.0.0"
authors = ["Jörg Sommer <joerg@jo-so.de>"]
edition = "2018"
description = "Computes the pairwise similarity between multiple words"
keywords = ["word", "string", "similarity", "distance", "Hamming", "Levenshtein", "Jaro"]
categories = ["command-line-utilities"]
repository = "https://gitlab.com/jo-so/word-dist"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta"
strsim = "0.10.0"
